# GPU_Algebraic_2G

./: .gitignore  CMakeLists.txt  README.md  eigensolver.cc  matMFEM.cc  matMFEM.hh
.cache/clangd/index/: eigensolver.cc.7D8ECA2F05EDA83C.idx  matMFEM.cc.EDA8848B542E0762.idx  matMFEM.hh.13A1AF8EBD7DBB1E.idx
